--- a/liberiaDashboard.Rmd
+++ b/liberiaDashboard.Rmd
@@ -58,8 +58,8 @@ library(leaflet)
 covHex <- gmHexGrid
 covHex@data <- data.frame(covHex@data, ifaInt)
 
-pal <- colorBin(palette = rev(brewer.pal(n = 10, name = "RdYlGn")),
-                    domain = c(0,1), bins = 10)
+pal <- colorNumeric(palette = brewer.pal(n = 10, name = "RdYlGn"),
+                    domain = c(0,1))
 
 leaflet() %>%
   addTiles(urlTemplate = mapbox.street,
@@ -172,8 +172,8 @@ library(leaflet)
 covHex <- gmHexGrid
 covHex@data <- data.frame(covHex@data, iycfInt)
 
-pal <- colorBin(palette = rev(brewer.pal(n = 10, name = "RdYlGn")),
-                    domain = c(0,1), bins = 10)
+pal <- colorNumeric(palette = brewer.pal(n = 10, name = "RdYlGn"),
+                    domain = c(0,1))
 
 leaflet() %>%
   addTiles(urlTemplate = mapbox.street,
@@ -244,8 +244,8 @@ library(leaflet)
 covHex <- gmHexGrid
 covHex@data <- data.frame(covHex@data, mnpInt)
 
-pal <- colorBin(palette = rev(brewer.pal(n = 10, name = "RdYlGn")),
-                    domain = c(0,1), bins = 10)
+pal <- colorNumeric(palette = brewer.pal(n = 10, name = "RdYlGn"),
+                    domain = c(0,1))
 
 leaflet() %>%
   addTiles(urlTemplate = mapbox.street,
@@ -337,8 +337,8 @@ library(leaflet)
 covHex <- gmHexGrid
 covHex@data <- data.frame(covHex@data, vitInt)
 
-pal <- colorBin(palette = rev(brewer.pal(n = 10, name = "RdYlGn")),
-                    domain = c(0,1), bins = 10)
+pal <- colorNumeric(palette = brewer.pal(n = 10, name = "RdYlGn"),
+                    domain = c(0,1))
 
 leaflet() %>%
   addTiles(urlTemplate = mapbox.street,
@@ -388,8 +388,8 @@ library(leaflet)
 covHex <- gmHexGrid
 covHex@data <- data.frame(covHex@data, screenInt)
 
-pal <- colorBin(palette = rev(brewer.pal(n = 10, name = "RdYlGn")),
-                    domain = c(0,1), bins = 10)
+pal <- colorNumeric(palette = brewer.pal(n = 10, name = "RdYlGn"),
+                    domain = c(0,1))
 
 leaflet() %>%
   addTiles(urlTemplate = mapbox.street,
@@ -505,8 +505,8 @@ library(leaflet)
 covHex <- gmHexGrid
 covHex@data <- data.frame(covHex@data, cmamInt)
 
-pal <- colorBin(palette = rev(brewer.pal(n = 10, name = "RdYlGn")),
-                    domain = c(0,1), bins = 10)
+pal <- colorNumeric(palette = brewer.pal(n = 10, name = "RdYlGn"),
+                    domain = c(0,1))
 
 leaflet() %>%
   addTiles(urlTemplate = mapbox.street,
@@ -973,3 +973,30 @@ leaflet() %>%
 		options = layersControlOptions(collapsed = FALSE, autoZIndex = TRUE)
 	)
 ```
+
+
+Grand Bassa
+================================================================================
+
+Row {.tabset .tabset-fade}
+--------------------------------------------------------------------------------
+ 
+### IFA
+
+### IYCF
+
+### MNP
+
+### Vitamin A
+
+### Nutrition Screening
+
+### CMAM
+
+### Stunting
+
+### Underweight
+
+### Wasting (WHZ)
+
+### Wasting (MUAC)
